Setting Python to execute in unbuffered mode while running detached in docker

--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -1,10 +1,12 @@
-FROM eduardolemasson/xgboost-alpine:1.0
+FROM eduardolemasson/xgboost-alpine:1.1
+
+ENV PYTHONUNBUFFERED=0
 
 COPY ./ app/
 
 # If you have some another python dependencies
-#RUN pip install -r /app/requirements.txt
+RUN pip install -r /app/requirements.txt
 
 WORKDIR /app
 
-CMD [ "python", "./src/main.py" ]
+CMD [ "python","-u", "./src/main.py" ]
